--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Set up environment
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl
       - name: Set up TiDB
         run: |
           docker pull hawkingrei/tidb-playground:no-cache
