--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -1,7 +1,7 @@
 name: always_check
 on:
   # Schedule daily updates
-  schedule: [{cron: "0/3 * * * *"}]
+  schedule: [{cron: "0 0 * * *"}]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
